--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -12,7 +12,14 @@
     padding-top: 10px;
     padding-bottom: 10px;
 }
-
+.icon-heading
+{
+    width: 35px;
+    height: 35px;
+    padding-bottom: 5px;
+    position: relative;
+    left: 30%;
+}
 @media (max-width: 767px) {
     .icon
     {
